--- a/style_login.css
+++ b/style_login.css
@@ -19,7 +19,7 @@ body{
     padding: 20px 25px;
     width: 300px;
 
-    background-color: rgba(0,0,0,.7);
+    background-color: #7a5122;
     box-shadow: 0 0 10px rgba(255,255,255,.3);
 }
 .container h1{
@@ -27,7 +27,7 @@ body{
     color: #fafafa;
     margin-bottom: 30px;
     text-transform: uppercase;
-    border-bottom: 4px solid #2979ff;
+    border-bottom: 4px solid #cf2f37;
 }
 .container label{
     text-align: left;
@@ -39,7 +39,7 @@ body{
     margin-bottom: 15px;
     border: none;
     background-color: transparent;
-    border-bottom: 2px solid #2979ff;
+    border-bottom: 2px solid #cf2f37;
     color: #fff;
     font-size: 20px;
 }
@@ -47,7 +47,7 @@ body{
     width: 100%;
     padding: 5px 0;
     border: none;
-    background-color:#2979ff;
+    background-color:#cf2f37;
     font-size: 18px;
     color: #fafafa;
 }
